kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piwik
  labels:
    name: piwik
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    name: piwik
